--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,25 @@
     },
     "[typescript]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
-    }
+    },
+    "workbench.colorCustomizations": {
+        "activityBar.activeBackground": "#817229",
+        "activityBar.background": "#817229",
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#174940",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "commandCenter.border": "#e7e7e799",
+        "sash.hoverBorder": "#817229",
+        "statusBar.background": "#5a501d",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#817229",
+        "statusBarItem.remoteBackground": "#5a501d",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "titleBar.activeBackground": "#5a501d",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#5a501d99",
+        "titleBar.inactiveForeground": "#e7e7e799"
+    },
+    "peacock.color": "#5a501d"
 }
