--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "radix-vue": "^1.9.9",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "vue": "^3.5.12"
+    "vue": "^3.5.12",
+    "vue3-colorpicker": "^2.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
