--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint": "eslint --ext .js,.ts,.vue ./src"
   },
   "dependencies": {
+    "@bobthered/tailwindcss-palette-generator": "^4.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.460.0",
