--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "radix-vue": "^1.9.9",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "tippy.js": "^6.3.7",
     "vue": "^3.5.12",
     "vue3-colorpicker": "^2.3.0"
   },
