--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tippy.js": "^6.3.7",
     "vue": "^3.5.12",
+    "vue-router": "4",
     "vue3-colorpicker": "^2.3.0"
   },
   "devDependencies": {
