--- a/package.json
+++ b/package.json
@@ -14,32 +14,32 @@
     "@bobthered/tailwindcss-palette-generator": "^4.0.0",
     "@vueuse/core": "^11.3.0",
     "@vueuse/motion": "^2.2.6",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "color-name-list": "^11.0.0",
-    "lucide-vue-next": "^0.460.0",
+    "lucide-vue-next": "^0.462.0",
     "nearest-color": "^0.4.4",
-    "radix-vue": "^1.9.9",
-    "tailwind-merge": "^2.5.4",
+    "radix-vue": "^1.9.10",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "tippy.js": "^6.3.7",
-    "vue": "^3.5.12",
+    "vue": "^3.5.13",
     "vue-router": "4",
     "vue3-colorpicker": "^2.3.0"
   },
   "devDependencies": {
     "@types/nearest-color": "^0.4.1",
-    "@vitejs/plugin-vue": "^5.1.4",
+    "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
-    "eslint-plugin-vue": "^9.30.0",
-    "postcss": "^8.4.47",
-    "prettier": "^3.3.3",
-    "sass": "^1.80.6",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.10",
+    "eslint-plugin-vue": "^9.31.0",
+    "postcss": "^8.4.49",
+    "prettier": "^3.4.1",
+    "sass": "^1.81.0",
+    "tailwindcss": "^3.4.15",
+    "typescript": "^5.7.2",
+    "vite": "^5.4.11",
     "vue-tsc": "^2.1.10"
   },
-  "packageManager": "pnpm@9.13.2+sha512.88c9c3864450350e65a33587ab801acf946d7c814ed1134da4a924f6df5a2120fd36b46aab68f7cd1d413149112d53c7db3a4136624cfd00ff1846a0c6cef48a"
+  "packageManager": "pnpm@9.14.2"
 }
