--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "color-name-list": "^11.0.0",
+    "lodash": "^4.17.21",
     "lucide-vue-next": "^0.462.0",
     "nearest-color": "^0.4.4",
     "radix-vue": "^1.9.10",
@@ -28,6 +29,7 @@
     "vue3-colorpicker": "^2.3.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.13",
     "@types/nearest-color": "^0.4.1",
     "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.20",
