--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@bobthered/tailwindcss-palette-generator": "^4.0.0",
+    "@shikijs/monaco": "^1.24.0",
     "@vueuse/core": "^11.3.0",
     "@vueuse/motion": "^2.2.6",
     "class-variance-authority": "^0.7.1",
@@ -19,6 +20,7 @@
     "color-name-list": "^11.0.0",
     "lodash": "^4.17.21",
     "lucide-vue-next": "^0.462.0",
+    "monaco-editor-core": "^0.52.0",
     "nearest-color": "^0.4.4",
     "radix-vue": "^1.9.10",
     "tailwind-merge": "^2.5.5",
@@ -38,6 +40,7 @@
     "postcss": "^8.4.49",
     "prettier": "^3.4.1",
     "sass": "^1.81.0",
+    "shiki": "^1.24.0",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
