--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tippy.js": "^6.3.7",
     "vue": "^3.5.13",
+    "vue-github-button": "^3.1.3",
     "vue-router": "4",
     "vue3-colorpicker": "^2.3.0"
   },
